<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Кухонный калькулятор</string>
    <string name="action_settings">Settings</string>
    <string name="lab_tab1">Конвертер</string>
    <string name="lab_tab2">Перерасчет</string>
    <string name="lab_tab3">Форма</string>

    <string name="start_ch">Выберите ингредиент</string>
    <string name="c_g">граммы (г)</string>
    <string name="c_l">литры (л)</string>
    <string name="c_ml">миллилитры (мл)</string>
    <string name="c_cup">стакан</string>
    <string name="c_small">чайная ложка</string>
    <string name="c_big">столовая ложка</string>
</resources>
