<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".mainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="left|top">
<!-- check-->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/change">

                <TextView
                    android:layout_width="230dp"
                    android:layout_height="fill_parent"
                    android:gravity="center_horizontal"
                    android:text="@string/start_ch"
                    android:id="@+id/et_ingr"
                    android:textAppearance="?android:attr/textAppearanceLarge"/>

            <ImageButton
                    android:layout_width="35dp"
                    android:layout_height="fill_parent"
                    android:src="@drawable/btn_change"
                    android:background="@null"
                    android:id="@+id/btn_ingr"/>
        </LinearLayout>

        <EditText
            android:layout_width="265dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:hint="количество"
            android:id="@+id/cap"/>
 <!-- buttons row 1-->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center">
            <ImageButton
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:src="@drawable/btn_off_g"
                android:id="@+id/btn_g"
                android:scaleType="fitStart"
                android:layout_weight="102"
                android:background="@drawable/shap_oval" />
            <ImageButton
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:src="@drawable/btn_off_l"
                android:background="@null"
                android:id="@+id/btn_l"
                android:scaleType="fitStart"
                android:layout_weight="102" />
            <ImageButton
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:src="@drawable/btn_off_ml"
                android:background="@null"
                android:id="@+id/btn_ml"
                android:scaleType="fitStart"
                android:layout_weight="102" />
        </LinearLayout>
 <!-- buttons row 2-->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center">
            <ImageButton
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:src="@drawable/btn_off_cup"
                android:background="@null"
                android:id="@+id/btn_cup"
                android:scaleType="fitStart"
                android:layout_weight="102" />
            <ImageButton
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:src="@drawable/btn_off_small"
                android:background="@null"
                android:id="@+id/btn_small"
                android:scaleType="fitStart"
                android:layout_weight="102" />
            <ImageButton
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:src="@drawable/btn_off_big"
                android:background="@null"
                android:id="@+id/btn_big"
                android:scaleType="fitStart"
                android:layout_weight="102" />
        </LinearLayout>
  <!-- conwert result-->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_gravity="center_horizontal">

            <LinearLayout
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/c_g"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/c_l"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/c_ml"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/c_cup"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/c_small"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/c_big"/>
            </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/gramm"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/liters"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/mliters"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/cup"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/s_spone"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/b_spone"/>
                </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</ScrollView>
